// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with stict mode when strict mode enabled 1`] = `
<div
  data-terra-base={true}
>
  <StrictMode>
    String
  </StrictMode>
</div>
`;

exports[`should support rendering a string without translation 1`] = `
<div
  data-terra-base={true}
>
  String
</div>
`;

exports[`should support rendering an array of children without translation 1`] = `
<div
  data-terra-base={true}
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;
